--- a/html/chart.html
+++ b/html/chart.html
@@ -42,7 +42,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170121.json',
+                url: '../data/20170123.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -128,7 +128,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170121.json',
+                url: '../data/20170123.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -213,7 +213,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170121.json',
+                url: '../data/20170123.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -298,7 +298,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170121.json',
+                url: '../data/20170123.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -383,7 +383,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170121.json',
+                url: '../data/20170123.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -468,7 +468,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170121.json',
+                url: '../data/20170123.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -549,12 +549,12 @@
             })
         })
         $("#monkye2").click(function(event){
-            var account = 'ass'
+            var account = 'monkey2'
             var heroName = []
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170121.json',
+                url: '../data/20170123.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -637,7 +637,7 @@
 
     <script>
         $.ajax({
-            url:'../data/20170121.json',
+            url:'../data/20170123.json',
             type:'GET',
             dataType:'json',
             data : {},
