html增加了每局细节数据的可视化展示

--- a/html/chart.html
+++ b/html/chart.html
@@ -28,11 +28,13 @@
     </h1>
 
 
-        <div id = '1' style="width:750px; height:400px;" class="echart1"></div>
-        <h4>这些是你们的对友跟队手的昵称,还记得多少?</h4>
-        <div><img src="../data/nickname.png" alt=""></div>
-        <h2>打了多少把</h2>
-        <div id = '2' style="width: 500px;height: 500px;" class ='echart2'></div>
+    <div id = '1' style="width:750px; height:400px;" class="echart1"></div>
+    <h4>这些是你们的对友跟队手的昵称,还记得多少?</h4>
+    <div><img src="../data/nickname.png" alt=""></div>
+    <h2>打了多少把</h2>
+    <div id = '2' style="width: 500px;height: 500px;" class ='echart2'></div>
+    <div id = '3' style="width:950px; height:400px;" class="echart3"></div>
+
 
     <style>
         .circle{
@@ -45,7 +47,6 @@
             margin: 0px auto 5px auto;
         }
     </style>
-
     <script>
         $("#ass").click(function(event){
             var account = 'ass'
@@ -53,7 +54,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170123.json',
+                url: '../data/20170121.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -142,7 +143,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170123.json',
+                url: '../data/20170121.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -230,7 +231,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170123.json',
+                url: '../data/20170121.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -318,7 +319,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170123.json',
+                url: '../data/20170121.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -406,7 +407,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170123.json',
+                url: '../data/20170121.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -494,7 +495,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170123.json',
+                url: '../data/20170121.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -583,7 +584,7 @@
             var loss = []
             var win = []
             $.ajax({
-                url: '../data/20170123.json',
+                url: '../data/20170121.json',
                 type: 'GET',
                 dataType: 'json',
                 data: {},
@@ -669,7 +670,7 @@
 
     <script>
         $.ajax({
-            url:'../data/20170123.json',
+            url:'../data/20170121.json',
             type:'GET',
             dataType:'json',
             data : {},
@@ -819,11 +820,266 @@
             myChart.setOption(option);
 
         })
+    </script>
 
+    <script>
+        $.ajax({
+            url:'../data/20170123matchdetail.json',
+            type:'GET',
+            dataType:'json',
+            data : {},
+        }).done(function(data){
+            matchInfo = data;
+            var dataBJ = [
+    [1, 55, 20, 56, 10000, "初中", 30, "已婚", "男", " "],
+    [2, 25, 11, 21, 20000, "高中", 28, "未婚", "男", " "],
+    [3, 70, 50, 40, 60000, "高中", 40, "已婚", "男", " "],
+    [4, 60, 35, 29, 24000, "高中", 48, "未婚", "男", " "],
+    [5, 80, 55, 56, 80000, "本科", 48, "已婚", "女", " "],
+    [6, 50, 57, 60, 40000, "本科", 30, "未婚", "女", " "],
+    [7, 74, 49, 36, 46000, "本科", 28, "已婚", "女", " "],
+    [8, 40, 55, 32, 20000, "本科", 20, "未婚", "男", " "],
+    [9, 80, 60, 43, 90000, "高中", 36, "已婚", "男", " "],
+    [10, 35, 28, 34, 48000, "高中", 15, "未婚", "男", " "],
+    [11, 58, 19, 33, 62000, "高中", 28, "已婚", "女", " "],
+    [12, 41, 11, 54, 36000, "高中", 26, "已婚", "男", " "],
+    [13, 64, 38, 62, 56000, "高中", 33, "已婚", "男", " "],
+    [14, 50, 79, 55, 48000, "本科", 36, "已婚", "女", " "],
+    [15, 40, 63, 44, 23000, "高中", 28, "已婚", "男", " "],
+    [16, 33, 6, 24, 70000, "高中", 14, "未婚", "男", " "],
+    [17, 88, 66, 76, 24000, "本科",25, "已婚", "男", " "],
+    [18, 66, 50, 66, 58000, "高中", 28, "未婚", "女", " "],
+    [19, 57, 31, 34, 49000, "硕士", 29, "已婚", "男", " "],
+    [20, 22, 8, 21,  39000, "本科", 30, "未婚", "男", " "],
+    [21, 39, 15, 36, 21000, "高中", 20, "未婚", "女", " "],
+    [22, 89, 69, 56, 26000, "高中", 35, "已婚", "男", " "],
+    [23, 88, 73, 60, 31000, "高中",33, "已婚", "男", " "],
+    [24, 31, 16, 35, 41000, "本科", 26, "未婚", "女", " "],
+    [25, 42, 25, 43, 52000, "高中", 31, "已婚", "女", " "],
+    [26, 60, 40, 38, 90000, "硕士", 30, "已婚", "男", " "],
+    [27, 24, 12, 19, 88000, "硕士", 45, "未婚", "女", " "],
+    [28, 44, 24, 39, 32000, "高中", 40, "未婚", "男", " "],
+    [29, 89, 96, 47, 88000, "硕士", 39, "已婚", "女", " "],
+    [30, 52, 24, 29, 45000, "高中", 32, "已婚", "男", " "],
+    [31, 55, 20, 56, 10000, "初中", 30, "已婚", "男", " "],
+    [32, 25, 11, 21, 20000, "高中", 28, "未婚", "男", " "],
+    [33, 70, 50, 40, 60000, "高中", 40, "已婚", "男", " "],
+    [34, 60, 35, 29, 24000, "高中", 48, "未婚", "男", " "],
+    [35, 80, 55, 56, 80000, "本科", 48, "已婚", "女", " "],
+    [36, 50, 57, 60, 40000, "本科", 30, "未婚", "女", " "],
+    [37, 74, 49, 36, 46000, "本科", 28, "已婚", "女", " "],
+    [38, 40, 55, 32, 20000, "本科", 47, "未婚", "男", " "],
+    [39, 80, 60, 43, 90000, "高中", 36, "已婚", "男", " "],
+    [40, 35, 28, 34, 48000, "高中", 39, "未婚", "男", " "],
+    [41, 58, 19, 33, 62000, "高中", 28, "已婚", "女", " "],
+    [42, 41, 11, 54, 36000, "高中", 40, "已婚", "男", " "],
+    [43, 64, 38, 62, 56000, "高中", 33, "已婚", "男", " "],
+    [44, 50, 79, 55, 48000, "本科", 36, "已婚", "女", " "],
+    [45, 40, 63, 44, 23000, "高中", 28, "已婚", "男", " "],
+    [46, 33, 6, 24, 70000, "高中", 46, "未婚", "男", " "],
+    [47, 88, 66, 76, 24000, "本科",25, "已婚", "男", " "],
+    [48, 66, 50, 66, 58000, "高中", 39, "未婚", "女", " "],
+    [49, 57, 31, 34, 49000, "硕士", 29, "已婚", "男", " "],
+    [50, 22, 8, 21,  39000, "本科", 30, "未婚", "男", " "],
+];
+            var dataAss = matchInfo['ass']
+            var dataBear = matchInfo['bear']
+            var dataMonkey = matchInfo['monkey']
+            var dataMonkey2 = matchInfo['monkye2']
+            var dataBrave = matchInfo['brave']
+            var dataMan = matchInfo['man']
+            var dataBeard = matchInfo['beart']
+            console.log(dataBJ);
+            console.log(dataAss)
+            var schema = [
+                {name: 'date', index: 0, text: '日'},
+                {name: 'hero', index: 1, text: '英雄'},
+                {name: 'kill', index: 2, text: '击杀'},
+                {name: 'death', index: 3, text: '死亡'},
+                {name: 'assist', index: 4, text: '助攻'},
+                {name: 'lasthit', index: 5, text: '补刀'},
+                {name: 'xpm', index: 6, text: 'XPM'},
+                {name: 'gpm', index: 6, text: 'GPM'}
+            ];
+            var itemStyle = {
+                normal: {
+                    opacity: 0.8,
+                    shadowBlur: 10,
+                    shadowOffsetX: 0,
+                    shadowOffsetY: 0,
+                    shadowColor: 'rgba(0, 0, 0, 0.5)'}
+            };
+            option = {
+                title: {
+                    //text: '每局详情',
+                    x: 'center',
+                    textStyle: {
+                        color: '#fff',
+                        fontSize: 17
+                    }
+                },
+            toolbox:{
+                feature: {
+                    saveAsImage: {show:true}
+                }
+            },
+            backgroundColor: '#404a59',
+            color: [
+                '#dd4444', '#fec42c', '#80F1BE'
+            ],
+            legend: {
+                show: true,
+                y: 'top',
+                data: ['ass', 'bear', 'monkey','man','brave','beard','monkey2'],
+                textStyle: {
+                    color: '#fff',
+                    fontSize: 16
+                }
+            },
+            grid: {
+                x: '10%',
+                x2: 150,
+                y: '18%',
+                y2: '10%'
+            },
+            tooltip: {
+                padding: 10,
+                backgroundColor: '#222',
+                borderColor: '#777',
+                borderWidth: 1,
+                formatter: function (obj) {
+                    var value = obj.value;
+                    return '<div style="border-bottom: 1px solid rgba(255,255,255,.3); font-size: 18px;padding-bottom: 7px;margin-bottom: 7px">'
+                        + obj.seriesName + '使用了: ' + dataAss[1]
+                        + '</div>'
+                        + schema[1].text + '：' + value[1] + '<br>'
+                        + schema[2].text + '：' + value[2] + '<br>'
+                        + schema[3].text + '：' + value[3] + '<br>'
+                        + schema[4].text + '：' + value[4] + '<br>'
+                        + schema[5].text + '：' + value[5] + '<br>'
+                        + schema[6].text + '：' + value[6] + '<br>';
+                }
+            },
+            xAxis: {
+                data:[1,2,3,4,5,6,7,8,9],
+                name: '交易时间（分钟）',
+                nameGap: 16,
+                type: 'category',
+                nameTextStyle: {
+                    color: '#fff',
+                    fontSize: 14
+                },
+                //max: 31,
+                splitLine: {
+                    show: false
+                },
+                axisLine: {
+                    lineStyle: {
+                        color: '#eee'
+                    }
+                }
+            },
+            yAxis: {
+                type: 'value',
+                name: 'KDA',
+                nameLocation: 'end',
+                nameGap: 20,
+                nameTextStyle: {
+                    color: '#fff',
+                    fontSize: 16
+                },
+                axisLine: {
+                    lineStyle: {
+                        color: '#eee'
+                    }
+                },
+                splitLine: {
+                    show: false
+                }
+            },
+            visualMap: [
+                {
+                    left: 'right',
+                    top: '10%',
+                    dimension: 4,
+                    min: 0,
+                    max: 10,
+                    itemWidth: 30,
+                    itemHeight: 120,
+                    calculable: true,
+                    precision: 0.1,
+                    text: ['圆形大小：盈利比'],
+                    textGap: 30,
+                    textStyle: {
+                        color: '#fff'
+                    },
+                    inRange: {
+                        symbolSize: [10, 70]
+                    },
+                    outOfRange: {
+                        symbolSize: [10, 70],
+                        color: ['rgba(255,255,255,.2)']
+                    },
+                    controller: {
+                        inRange: {
+                            color: ['#c23531']
+                        },
+                        outOfRange: {
+                            color: ['#444']
+                        }
+                    }
+                },
 
-
-
+            ],
+            series: [
+                {
+                    name: 'ass',
+                    type: 'scatter',
+                    itemStyle: itemStyle,
+                    data: dataBJ
+                },
+                {
+                    name: 'bear',
+                    type: 'scatter',
+                    itemStyle: itemStyle,
+                    data: dataBJ
+                },
+                {
+                    name: 'monkey',
+                    type: 'scatter',
+                    itemStyle: itemStyle,
+                    data: dataBJ
+                },
+                {
+                    name: 'man',
+                    type: 'scatter',
+                    itemStyle: itemStyle,
+                    data: dataBJ
+                },
+                {
+                    name: 'brave',
+                    type: 'scatter',
+                    itemStyle: itemStyle,
+                    data: dataBJ
+                },
+                {
+                    name: 'beard',
+                    type: 'scatter',
+                    itemStyle: itemStyle,
+                    data: dataBJ
+                },
+                {
+                    name: 'monkye2',
+                    type: 'scatter',
+                    itemStyle: itemStyle,
+                    data: dataBJ,
+                    data: dataBJ
+                }
+            ]
+        };
+        var myChart = echarts.init(document.getElementById(3));
+        myChart.setOption(option);
+    })
     </script>
 </body>
-
 </html>
